# CRUD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
CRUD/: main.py
CRUD/apis/: api.py  articles.py  comments.py  users.py
CRUD/article/domain/: articles.py
CRUD/article/schema/: articles.py
CRUD/article/service/: articles.py
CRUD/comment/domain/: comments.py
CRUD/comment/service/: comments.py
CRUD/crud/: articles.py  comments.py  users.py
CRUD/db/: init_db.py  session.py
CRUD/models/: __init__.py  articles.py  comments.py  users.py
CRUD/schemas/: articles.py  comments.py  users.py
CRUD/user/domain/: users.py
CRUD/user/schema/: users.py
app/: main.py
app/api/: api.py  articles.py  comments.py  main.py  sql_app.db  users.py
app/apis/: api.py  articles.py  comments.py  users.py
app/crud/: articles.py  comments.py  users.py
app/db/: init_db.py  session.py
app/models/: __init__.py  articles.py  base.py  comments.py  users.py
app/schemas/: articles.py  comments.py  users.py
app/tests/: conftest.py
crud/: main.py
crud/apis/: api.py  article.py  comment.py  user.py
crud/db/: base.py  init_db.py
crud/domain/: article.py  articles.py  comment.py  user.py
crud/dto/: article.py  comment.py  user.py
crud/entity/: article.py  comment.py  user.py
crud/repository/: article.py  comment.py  user.py
crud/schema/: article.py  comment.py  user.py
crud/service/: article.py  comment.py  user.py
tests/: conftest.py
tests/test_apis/: test_articles.py  test_comments.py  test_users.py
(+19 files in other folders)
