[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
sqlalchemy = "^1.4.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
