[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
fastapi = "^0.85.1"
sqlalchemy = "^1.4.42"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 88
max-complexity = 20

[tool.mypy]
ignore_missing_imports = true