[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
fastapi = "^0.85.1"
sqlalchemy = "^1.4.42"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
isort = "*"
requests = "^2.28.1"
commitizen = "^2.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 88
max-complexity = 20

[tool.mypy]
ignore_missing_imports = true